@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-07-29T00:42:26Z",
+  "timestamp" : "2023-07-29T08:08:35Z",
   "count_outdated" : 143731,
   "uniques_outdated" : 1574,
-  "count" : 147922,
-  "uniques" : 1609,
+  "count" : 148034,
+  "uniques" : 1611,
   "clones" : [
     {
       "timestamp": "2023-07-15T00:00:00Z",
-      "count": 267,
+      "count": 133,
       "count_minmax": [ 110, 298 ],
-      "count_decinc": [ 31, 298 ],
+      "count_decinc": [ 165, 298 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
@@ -130,6 +130,15 @@
       "uniques": 5,
       "uniques_minmax": [ 4, 5 ],
       "uniques_decinc": [ 0, 5 ]
+    },
+    {
+      "timestamp": "2023-07-29T00:00:00Z",
+      "count": 112,
+      "count_minmax": [ 112, 112 ],
+      "count_decinc": [ 0, 112 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
