@@ -1,3 +1,12 @@
+2023-07-29T08:08:35Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5699383177 # 1050
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-29
+* notice: last 14d: unq all: 5 4138
+* notice: prev accum: outdated-unq outdated-all / unq all: 1574 143731 / 1609 147922
+* notice: next accum: outdated-unq outdated-all / unq all: 1574 143731 / 1611 148034
+* notice: prev exec diff / last date diff / accum: unq all: +2 +112 -0 -134 / +2 +112 -0 -0 / 2 112
+* notice: removed / changed dates: [] / [2023-07-15 2023-07-29]
+
 2023-07-29T00:42:26Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5697524724 # 1049
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-29
